--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -1,38 +1,47 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  margin-top: 25px;
+  background-color: bisque;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container > ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container > ul > li {
+  border: 1px solid black;
+  display: flex;
+  margin: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.day {
+  display: block;
+  font-style: italic;
+  font-size: 15px;
+}
+.container2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: bisque;
+  width: 150px;
+  padding: 10px;
+}
+.container2:hover {
+  background-color: brown;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container2 > img {
+  display: block;
 }
