--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -8,9 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+
   margin-top: 25px;
-  background-color: bisque;
 }
 
 .container > ul {
@@ -20,7 +19,6 @@
 }
 
 .container > ul > li {
-  border: 1px solid black;
   display: flex;
   margin: 20px;
 }
@@ -34,14 +32,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: bisque;
-  width: 150px;
+
+  list-style-type: none;
+  width: 130px;
   padding: 10px;
-}
-.container2:hover {
-  background-color: brown;
 }
 
 .container2 > img {
   display: block;
+}
+
+.container2:hover {
+  background-color: #cee1ec;
+  opacity: 1;
+  border: 2px solid #b0def8;
+  border-radius: 10px;
+}
+.selected {
+  margin-left: 480px;
+  display: flex;
+}
+
+.txt {
+  margin-top: 250px;
+  text-align: center;
 }
